--- a/package.json
+++ b/package.json
@@ -2,11 +2,30 @@
   "name": "sketchpad",
   "version": "0.0.0",
   "description": "Throwback sketchpad clone in Reactjs",
-  "main": "index.jsx",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
-  "keywords": ["sketchpad"],
+  "keywords": [
+    "sketchpad"
+  ],
   "author": "Cedric Charly <cedric.charly@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.0",
+    "npm-install-webpack-plugin": "^2.0.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.7.3"
+  }
 }
